--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Nicolas Corbalan Calvo",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.21.0"
+    "apollo-server": "^2.21.0",
+    "dotenv": "^8.2.0",
+    "mongoose": "^5.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
